--- a/src/main/resources/assets/fighterspath/lang/en_us.lang
+++ b/src/main/resources/assets/fighterspath/lang/en_us.lang
@@ -1,6 +1,6 @@
 fighterspath.bar_name=Fighter's Path Experience
-potion.effect.fighters_brew=Potion of the Fighter
-splash_potion.effect.fighters_brew=Splash Potion of the Fighter
-lingering_potion.effect.fighters_brew=Lingering Potion of the Fighter
-tipped_arrow.effect.fighters_brew=Arrow of the Fighter
+potion.effect.fighters_brew=Potion of the Fighter's Essence
+splash_potion.effect.fighters_brew=Splash Potion of the Fighter's Essence
+lingering_potion.effect.fighters_brew=Lingering Potion of the Fighter's Essence
+tipped_arrow.effect.fighters_brew=Arrow of the Fighter's Essence
 fighters_brew=Fighter Soul
